--- a/fichier.html
+++ b/fichier.html
@@ -12,6 +12,8 @@
     <p id="texte">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, non ex nisi laboriosam eligendi, officiis ab
         incidunt cumque dolore autem architecto minus ipsam consequuntur odit vel molestias? Voluptatum, debitis
         expedita?</p>
+    <h2 id="title2">Titre 2
+    </h2>
 
     <button id="colorButton">Change Color</button>
 
